<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/img_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:text="@string/label_example_name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/circle_profile"
            app:layout_constraintStart_toEndOf="@+id/circle_profile"
            app:layout_constraintTop_toTopOf="@+id/circle_profile" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:src="@drawable/ic_notification"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraint_checkin_checkout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/rvHome">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/check_in_info_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="33dp"
                            android:layout_marginTop="12dp"
                            android:outlineSpotShadowColor="#26545454"
                            android:visibility="visible"
                            app:cardBackgroundColor="#6D95D2"
                            app:cardCornerRadius="20dp"
                            app:cardElevation="10dp"
                            tools:targetApi="p"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="20dp">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/iv_qr"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/iv_qr"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/textView2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/poppins_semibold"
                                    android:text="@string/label_masuk_ke_ruang_publik"
                                    android:textColor="@color/white"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="1.0"
                                    app:layout_constraintStart_toEndOf="@+id/iv_qr"
                                    app:layout_constraintTop_toTopOf="parent" />


                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btn_check_in"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:layout_constraintStart_toEndOf="@id/iv_qr"
                                    app:layout_constraintTop_toBottomOf="@id/textView2"
                                    android:text="@string/label_check_in"
                                    android:layout_marginTop="15dp"
                                    android:textAllCaps="false"
                                    android:textSize="14sp"
                                    android:textColor="@color/white"
                                    android:paddingVertical="5dp"
                                    android:paddingHorizontal="30dp"
                                    android:drawableStart="@drawable/ic_qr"
                                    android:background="@drawable/bg_btn_check_in"
                                    />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/check_in_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="33dp"
                            android:layout_marginTop="12dp"
                            android:background="#3D679F"
                            android:visibility="gone"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">

                            <LinearLayout
                                android:id="@+id/linear_checkin_info"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="20dp"
                                android:background="@drawable/bg_check_in_info"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <androidx.appcompat.widget.AppCompatImageView
                                        android:id="@+id/id_ic_location"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/ic_location"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/place"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:fontFamily="@font/poppins_semibold"
                                        android:text="@string/label_example_place"
                                        android:textColor="#FFFFFF"
                                        android:textSize="14sp"
                                        app:layout_constraintBottom_toBottomOf="@id/id_ic_location"
                                        app:layout_constraintStart_toEndOf="@id/id_ic_location"
                                        app:layout_constraintTop_toTopOf="@id/id_ic_location" />

                                    <androidx.appcompat.widget.AppCompatImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/ic_arrow_right"
                                        app:layout_constraintBottom_toBottomOf="@id/place"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="@+id/place" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/constraint_middle_checkout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp">

                                    <androidx.appcompat.widget.AppCompatImageView
                                        android:id="@+id/id_ic_walk"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/ic_walk"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/time_checkin"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:fontFamily="@font/poppins_light"
                                        android:text="@string/label_example_time"
                                        android:textColor="#FFFFFF"
                                        android:textSize="12sp"
                                        app:layout_constraintBottom_toBottomOf="@id/id_ic_walk"
                                        app:layout_constraintStart_toEndOf="@id/id_ic_walk"
                                        app:layout_constraintTop_toTopOf="@id/id_ic_walk" />

                                    <androidx.appcompat.widget.AppCompatImageView
                                        android:id="@+id/id_ic_timer"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="20dp"
                                        android:src="@drawable/ic_timer"
                                        app:layout_constraintBottom_toBottomOf="@id/time_checkin"
                                        app:layout_constraintStart_toEndOf="@id/time_checkin"
                                        app:layout_constraintTop_toTopOf="@id/time_checkin" />

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:fontFamily="@font/poppins_light"
                                        android:text="@string/label_time_check_in"
                                        android:textColor="#FFFFFF"
                                        android:textSize="12sp"
                                        app:layout_constraintBottom_toBottomOf="@id/id_ic_timer"
                                        app:layout_constraintStart_toEndOf="@id/id_ic_timer"
                                        app:layout_constraintTop_toTopOf="@id/id_ic_timer" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/btn_check_out"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:layout_marginHorizontal="10dp"
                                    android:padding="10dp"
                                    app:cardBackgroundColor="#91B8FF"
                                    app:cardCornerRadius="10dp"
                                    app:cardElevation="0dp"
                                    app:layout_constraintTop_toBottomOf="@id/linear_checkin_info"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal"
                                        android:gravity="center_horizontal"
                                        android:orientation="horizontal"
                                        android:padding="10dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:fontFamily="@font/poppins_semibold"
                                            android:gravity="center"
                                            android:text="@string/label_check_out"
                                            android:textColor="@color/white"
                                            android:textSize="12sp" />

                                        <androidx.appcompat.widget.AppCompatImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="8dp"
                                            android:src="@drawable/ic_check_out" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>

                            </LinearLayout>



                    </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="40dp"
                        android:textAlignment="center"
                        tools:listitem="@layout/item_view"
                        app:layout_constraintTop_toBottomOf="@id/constraint_checkin_checkout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>